--- a/src/App.css
+++ b/src/App.css
@@ -180,3 +180,8 @@
   background-color: #0093e9;
   background-image: linear-gradient(160deg, #0093e9 0%, #80d0c7 100%);
 }
+
+/* canvas */
+canvas {
+  border: 2px solid blue;
+}
